--- a/WEB02_CSS3/src/main/webapp/02_Selector.html
+++ b/WEB02_CSS3/src/main/webapp/02_Selector.html
@@ -12,6 +12,25 @@
 			{
 				color:#144AFB; /*color : 글자색*/
 			}
+			h3
+			{
+				color:red;
+			}
+			p
+			{
+				background:yellow;
+			}
+			h1,h3
+			{
+				background:silver;  /* 컴마를 사용해서 동시 두 개의 태그를 선택할 수도 있습니다.*/
+			}
+			img
+			{
+				width : 100px;
+				virtical-align:middle;
+				/* virtlcal-align : 이미지와 글자간의 수평 맞춤 속성. top 위쪽맞춤
+				bottom 아래쪽 맞춤 middle 중간맞춤*/
+			}
 		</style>
 	</head>
 	<body>
