--- a/WEB02_CSS3/src/main/webapp/12_Border.html
+++ b/WEB02_CSS3/src/main/webapp/12_Border.html
@@ -16,8 +16,14 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Border</title>
+		<style type="text/css">
+			.box1{width:500px; height:80px; background:yellow;}
+		</style>
 	</head>
-	<body>
 	
+	<body>
+		<div class = "box1"> <h1>Lorem ipsum dolor amet</h1> </div>
+		<br>
+		<div class = "box2"> <h1>Lorem ipsum dolor amet</h1> </div>
 	</body>
 </html>
