--- a/WEB02_CSS3/src/main/webapp/12_Border.html
+++ b/WEB02_CSS3/src/main/webapp/12_Border.html
@@ -17,7 +17,17 @@
 		<meta charset="UTF-8">
 		<title>Border</title>
 		<style type="text/css">
-			.box1{width:500px; height:80px; background:yellow;}
+			.box1{width:500px; height:80px; background:yellow;
+				border-left-width:thin;
+				border-right-width:15px;
+				border-top-width:thick;
+				border-bottom-width:20px;
+			}
+			/* 
+			border-width:thin;
+			border-width:medium;
+			border-width:thick;
+			 */
 		</style>
 	</head>
 	
