--- a/WEB02_CSS3/src/main/webapp/12_Border.html
+++ b/WEB02_CSS3/src/main/webapp/12_Border.html
@@ -28,6 +28,12 @@
 			border-width:medium;
 			border-width:thick;
 			 */
+			 
+			 /* 세로방향 | 가로방향
+			 border-width : 2px 5px; */
+			 
+			 /* 위 | 가로 방향 | 아래 
+			 border-width: 1px 5px 10px; */
 		</style>
 	</head>
 	
