--- a/WEB02_CSS3/src/main/webapp/13_BoxModel.html
+++ b/WEB02_CSS3/src/main/webapp/13_BoxModel.html
@@ -11,6 +11,7 @@
 		<title>Box Model</title>
 	</head>
 	<body>
-		
+		<div class="box">박스 모델1</div>
+		<div class="box">박스 모델2</div>
 	</body>
 </html>
