--- a/WEB02_CSS3/src/main/webapp/14_ListMenu.html
+++ b/WEB02_CSS3/src/main/webapp/14_ListMenu.html
@@ -3,8 +3,27 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>List Menu</title>
+		<style type="text/css">
+			#tmenu{
+				list-style: none;
+				padding:0px;
+				margin:0px;
+			}
+			/* ul{list-style:none; padding:0; margin:0;} */
+			
+			#tmenu li{
+				float:left; padding:10px 20px;
+				background: yellow; border:1px solid blue;
+				margin : 10px; 
+			}
+		</style>
 	</head>
 	<body>
-		
+		<ul id = "tmenu">
+			<li>회사소개</li>
+			<li>사업소개</li>
+			<li>고객지원</li>
+			<li>상품문의</li>
+		</ul>
 	</body>
 </html>
