--- a/WEB02_CSS3/src/main/webapp/14_ListMenu.html
+++ b/WEB02_CSS3/src/main/webapp/14_ListMenu.html
@@ -17,6 +17,9 @@
 				margin : 10px; 
 			}
 		</style>
+		<!-- list-style : none; 글머리 기호를 감춥니다.
+		padding : 0px; 글머리 기호가 있던 공간을 삭제합니다.
+		float : left; 아래로 나열되는 리스트를 한 라인에 이어줍니다. -->
 	</head>
 	<body>
 		<ul id = "tmenu">
