--- a/WEB02_CSS3/src/main/webapp/15_PseudoClass01.html
+++ b/WEB02_CSS3/src/main/webapp/15_PseudoClass01.html
@@ -13,8 +13,42 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>PseudoClass01</title>
+		<style type="text/css">
+			ul{
+				list-style:none; padding:0px; maring:0px;
+			}
+			ul li{
+				float:left; padding: 15px; text-align:center; 
+				border:1px solid blue; width:100px;
+			}
+			ul li:nth-child(1){
+				background:orange;
+			}
+			ul li:nth-child(2){
+				background:yellow;
+			}
+			ul li:nth-child(3){
+				background:orange;
+			}
+			ul li:nth-child(4){
+				background:yellow;
+			}
+			ul li:nth-child(5){
+				background:orange;
+			}
+			ul li:nth-child(6){
+				background:yellow;
+			}
+		</style>
 	</head>
 	<body>
-		
+		<ul id = "tmenu">
+			<li>회사소개</li>
+			<li>사업</li>
+			<li>조직도</li>
+			<li>게시판</li>
+			<li>고객지원</li>
+			<li>사이트맵</li>
+		</ul>
 	</body>
 </html>
