--- a/WEB02_CSS3/src/main/webapp/15_PseudoClass01.html
+++ b/WEB02_CSS3/src/main/webapp/15_PseudoClass01.html
@@ -21,7 +21,7 @@
 				float:left; padding: 15px; text-align:center; 
 				border:1px solid blue; width:100px;
 			}
-			ul li:nth-child(1){
+			/*ul li:nth-child(1){
 				background:orange;
 			}
 			ul li:nth-child(2){
@@ -37,6 +37,13 @@
 				background:orange;
 			}
 			ul li:nth-child(6){
+				background:yellow;
+			}*/
+			
+			ul li:nth-child(2n){
+				background:orange;
+			}
+			ul li:nth-child(2n+1){
 				background:yellow;
 			}
 		</style>
