--- a/WEB02_CSS3/src/main/webapp/15_PseudoClass01.html
+++ b/WEB02_CSS3/src/main/webapp/15_PseudoClass01.html
@@ -46,6 +46,12 @@
 			ul li:nth-child(2n+1){
 				background:yellow;
 			}
+			ul li:first-child{
+				border-radius:20px 0 0 20px;
+			}
+			ul li:last-child{
+				border-radius:0px 20 20 0px;
+			}
 		</style>
 	</head>
 	<body>
