--- a/WEB02_CSS3/src/main/webapp/15_PseudoClass01.html
+++ b/WEB02_CSS3/src/main/webapp/15_PseudoClass01.html
@@ -49,8 +49,9 @@
 			ul li:first-child{
 				border-radius:20px 0 0 20px;
 			}
+			
 			ul li:last-child{
-				border-radius:0px 20 20 0px;
+				border-radius:0px 20px 20px 0px;
 			}
 		</style>
 	</head>
