--- a/WEB02_CSS3/src/main/webapp/15_PseudoClass01.html
+++ b/WEB02_CSS3/src/main/webapp/15_PseudoClass01.html
@@ -19,8 +19,10 @@
 			}
 			ul li{
 				float:left; padding: 15px; text-align:center; 
-				border:1px solid blue; width:100px;
+				border:1px solid blue; width:100px; border-left-width:0px;
+				border-right-width:0px;
 			}
+			
 			/*ul li:nth-child(1){
 				background:orange;
 			}
@@ -47,11 +49,11 @@
 				background:yellow;
 			}
 			ul li:first-child{
-				border-radius:20px 0 0 20px;
+				border-radius:20px 0 0 20px; border-left-width:1px;
 			}
 			
 			ul li:last-child{
-				border-radius:0px 20px 20px 0px;
+				border-radius:0px 20px 20px 0px; border-right-width:1px;
 			}
 		</style>
 	</head>
