--- a/WEB02_CSS3/src/main/webapp/15_PseudoClass02.html
+++ b/WEB02_CSS3/src/main/webapp/15_PseudoClass02.html
@@ -3,8 +3,21 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>15_PseudoClass02</title>
+		<style type="text/css">
+			li>a:first-child{color:red;}
+			li:first-child>a{color:blue;}
+		</style>
 	</head>
 	<body>
-		
+		<ul>
+			<li><a href="#">PsuedoClasses</a></li>
+			<li><a href="#">PsuedoClasses</a></li>
+			<li><a href="#">PsuedoClasses</a></li>
+			<li><a href="#">PsuedoClasses</a></li>
+			<li><a href="#">PsuedoClasses</a></li>
+			<li><a href="#">PsuedoClasses</a></li>
+			<li><a href="#">PsuedoClasses</a></li>
+			<li><a href="#">PsuedoClasses</a></li>
+		</ul>
 	</body>
 </html>
