--- a/WEB02_CSS3/src/main/webapp/15_PseudoClass02.html
+++ b/WEB02_CSS3/src/main/webapp/15_PseudoClass02.html
@@ -5,7 +5,10 @@
 		<title>15_PseudoClass02</title>
 		<style type="text/css">
 			li>a:first-child{color:red;}
+			/* 모든 li 안의 첫 번째 a 태그들 - li 안에는 모두 a태그 하나만 있으므로, 결국 모든
+			a 태그를 선택한 것과 같습니다. */
 			li:first-child>a{color:blue;}
+			/* 첫 번째 li의 자식 태그 중 a태그를 선택 */
 		</style>
 	</head>
 	<body>
