--- a/WEB02_CSS3/src/main/webapp/16_CSS_Size.html
+++ b/WEB02_CSS3/src/main/webapp/16_CSS_Size.html
@@ -14,6 +14,28 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>16_CSS_Size</title>
+		<style type="text/css">
+			/* % 단위 지정 */
+			p:nth-child(1){font-size:50%;}
+			p:nth-child(2){font-size:100%;}
+			p:nth-child(3){font-size:150%;}
+			p:nth-child(4){font-size:200%;}
+			p:nth-child(5){font-size:250%;}
+			
+			 /*px(pixel) 단위 지정
+			p:nth-child(1){font-size:8px;}
+			p:nth-child(2){font-size:16px;}
+			p:nth-child(3){font-size:24px;}
+			p:nth-child(4){font-size:32px;}
+			p:nth-child(5){font-size:40px;}
+			
+			em 단위 지정
+			p:nth-child(1){font-size:0.5em;}
+			p:nth-child(2){font-size:1em;}
+			p:nth-child(3){font-size:1.5em;}
+			p:nth-child(4){font-size:2em;}
+			p:nth-child(5){font-size:2.5em;}*/
+		</style>
 	</head>
 	<body>
 		<p> Lorom Ipsum is simply dummy text of the printing and ...</p>
