--- a/WEB02_CSS3/src/main/webapp/17_Background.html
+++ b/WEB02_CSS3/src/main/webapp/17_Background.html
@@ -1,10 +1,75 @@
 <!DOCTYPE html>
+<!-- * 배경 속성
+	- 특정  태그의 배경이미지 또는 색상을 지정하는 스타일 속성.
+	- 종류
+		1) background-image 속성
+			- 배경에 넣을 그림을 지정하는 스타일 속성.
+			- 속성에는 URL단위 또는 그레이디언트를 입력.
+		2) background-size 속성
+			- 그림 크기를 조절할 때 사용하는 스타일 속성이며, CSS3에서 추가된 기능.
+			- 키워드 : contain/cover
+				. contain : 너비를 100%로 지정한 것과 같은 효과.
+				. cover : 높이를 100%로 지정한 것과 같은 효과.
+		3) background-repeat 속성
+			- repeat : 이미지가 패턴을 이룸.
+			- 키워드 : no-repeat/repeat/repeat-x/repeat-y/round/space
+			- repeat-x : x축 방향으로 이미지가 반복.
+			- repeat-y : y축 방향으로 이미지가 반복.
+		4) background-attachment 속성
+			- 배경 이미지를 어떠한 방식으로 화면에 붙일 것인지를 지정하는 스타일 속성.
+			- 속성의 기본 키워드 : scroll(키워드:fixed/scroll)
+			- fixed : 스크롤을 이동해도 배경이미지 고정.
+		5) background-position 속성
+			- backgound-position : x축 위치;
+			- backgound-position : x축 위치 y축 위치; 
+-->
 <html>
 	<head>
 		<meta charset="UTF-8">
 		<title>17_Background</title>
+		<style type="text/css">
+			body{border:1px solid black; margin:10px;}
+			body *{margin:10px; padding:0px; border:1px solid black;}
+			body{
+				background-image:url(image/BackgroundFront.png);
+				background-size:100%;
+				background-attachment:fixed;
+				background-repeat:repeat-x;
+				background-position:0px 100px;
+			}
+		</style>
 	</head>
 	<body>
-		
+		<h1>Lorem ipsum</h1>
+		<p>대통령이 궐위된 때 또는 대통령 당선자가 사망하거나 판결 기타의 사유로
+			 그 자격을 상실한 때에는 60일 이내에 후임자를 선거한다. 
+			 대통령은 내란 또는 외환의 죄를 범한 경우를 제외하고는 재직중 형사상의 소추를 받지 아니한다.
+			  모든 국민은 주거의 자유를 침해받지 아니한다. 
+			  주거에 대한 압수나 수색을 할 때에는 검사의 신청에 의하여 법관이 발부한 영장을 제시하여야 한다.
+			   정당의 목적이나 활동이 민주적 기본질서에 위배될 때에는 정부는 헌법재판소에 
+			   그 해산을 제소할 수 있고, 정당은 헌법재판소의 심판에 의하여 해산된다. 
+			   국군은 국가의 안전보장과 국토방위의 신성한 의무를 수행함을 사명으로 하며, 
+			   그 정치적 중립성은 준수된다.
+		</p>
+		<p>대통령이 궐위된 때 또는 대통령 당선자가 사망하거나 판결 기타의 사유로
+			 그 자격을 상실한 때에는 60일 이내에 후임자를 선거한다. 
+			 대통령은 내란 또는 외환의 죄를 범한 경우를 제외하고는 재직중 형사상의 소추를 받지 아니한다.
+			  모든 국민은 주거의 자유를 침해받지 아니한다. 
+			  주거에 대한 압수나 수색을 할 때에는 검사의 신청에 의하여 법관이 발부한 영장을 제시하여야 한다.
+			   정당의 목적이나 활동이 민주적 기본질서에 위배될 때에는 정부는 헌법재판소에 
+			   그 해산을 제소할 수 있고, 정당은 헌법재판소의 심판에 의하여 해산된다. 
+			   국군은 국가의 안전보장과 국토방위의 신성한 의무를 수행함을 사명으로 하며, 
+			   그 정치적 중립성은 준수된다.
+		</p>
+		<p>대통령이 궐위된 때 또는 대통령 당선자가 사망하거나 판결 기타의 사유로
+			 그 자격을 상실한 때에는 60일 이내에 후임자를 선거한다. 
+			 대통령은 내란 또는 외환의 죄를 범한 경우를 제외하고는 재직중 형사상의 소추를 받지 아니한다.
+			  모든 국민은 주거의 자유를 침해받지 아니한다. 
+			  주거에 대한 압수나 수색을 할 때에는 검사의 신청에 의하여 법관이 발부한 영장을 제시하여야 한다.
+			   정당의 목적이나 활동이 민주적 기본질서에 위배될 때에는 정부는 헌법재판소에 
+			   그 해산을 제소할 수 있고, 정당은 헌법재판소의 심판에 의하여 해산된다. 
+			   국군은 국가의 안전보장과 국토방위의 신성한 의무를 수행함을 사명으로 하며, 
+			   그 정치적 중립성은 준수된다.
+		</p>
 	</body>
 </html>
