--- a/WEB02_CSS3/src/main/webapp/18_Position.html
+++ b/WEB02_CSS3/src/main/webapp/18_Position.html
@@ -13,7 +13,7 @@
 						놓고 사용해야 됨.
 		. fixed : 스크린을 기준으로 위치 고정. 지정한 위치에 고정해 배치. 화면에서 요소가 잘릴 수도 있음
 					스크롤 시에도 위치가 이동하지 않습니다.
-* z-index 속성 : defalut 값 : auto
+* z-index 속성 : default 값 : auto
 	- HTML 페이지의 뒤에 입력한 태그가 상위에 위치하는 순서를 변경시 이용.
 	- position 속성인 relative, absolute가 적용된 상태에서 적용해야 됨.
 * overflow 속성
