--- a/WEB02_CSS3/src/main/webapp/18_Position.html
+++ b/WEB02_CSS3/src/main/webapp/18_Position.html
@@ -39,9 +39,28 @@
 				/* static 은 left로 조정이 되지 않습니다. */
 			}
 			
+			
+			.temp
+			{
+				clear:both; height:50px;
+			}
+			
+			.box3{
+				width : 100px; background:yellow; padding: 20px; float:left;
+			}
+			.box4{
+				width : 300px; background:green; padding: 20px; color : white;
+				float: left; font-weight: bold; position : relative; left : -50px; top:30px;
+			}
+			
 		</style>
 	</head>
 	<body>
+		<div class ="box3" >박스3</div>
+		<div class ="box4" >박스4</div>
+	
+		<div class = "temp"></div>
+		<hr>
 		<h1>상대적 위치 좌표 - static</h1>
 		<div class ="box1" >박스1</div>
 		<div class ="box2" >박스2</div>
