--- a/WEB02_CSS3/src/main/webapp/18_Position.html
+++ b/WEB02_CSS3/src/main/webapp/18_Position.html
@@ -52,10 +52,34 @@
 				width : 300px; background:green; padding: 20px; color : white;
 				float: left; font-weight: bold; position : relative; left : -50px; top:30px;
 			}
-			
+			#wrap{position:relative; width:300px; height:300px; border:1px solid black;
+				background:white; overflow:hidden;/* absolute를 감싸는 div는 relative로 지정합니다. */
+			}
+			.box5{position : absolute; width:50px; height:50px;}
+			#abs1{top:0px; left:0px; background:red;}
+			#abs2{top:0px; left:50px; background:blue;}
+			#abs3{top:0px; left:100px; background:red;}
+			#abs4{top:0px; left:150px; background:blue;}
+			#abs5{top:0px; left:200px; background:red;}
+			#abs6{top:0px; left:250px; background:blue;}
+			#abs7{top:0px; left:300px; background:red;}
 		</style>
 	</head>
 	<body>
+	
+		<h1>절대적 위치 좌표 - absolute</h1>
+		<div id = "wrap">
+			<div id = "abs1" class = "box5"></div>
+			<div id = "abs2" class = "box5"></div>
+			<div id = "abs3" class = "box5"></div>
+			<div id = "abs4" class = "box5"></div>
+			<div id = "abs5" class = "box5"></div>
+			<div id = "abs6" class = "box5"></div>
+			<div id = "abs7" class = "box5"></div>
+		</div>
+		<hr>
+	
+		<h1>상대적 위치 좌표 - relative</h1>
 		<div class ="box3" >박스3</div>
 		<div class ="box4" >박스4</div>
 	
