--- a/WEB02_CSS3/src/main/webapp/18_Position.html
+++ b/WEB02_CSS3/src/main/webapp/18_Position.html
@@ -59,19 +59,27 @@
 			#wrap
 			{
 				position:relative; width:300px; height:300px; border:1px solid black;
-				background:white; overflow:hidden;/* absolute를 감싸는 div는 relative로 지정합니다. */
+				background:white; overflow:scroll;/* absolute를 감싸는 div는 relative로 지정합니다. */
 			}
 			.box5
 			{
 				position : absolute; width:50px; height:50px;
 			}
-			#abs1{top:0px; left:0px; background:red;}
+			/*#abs1{top:0px; left:0px; background:red;}
 			#abs2{top:0px; left:50px; background:blue;}
 			#abs3{top:0px; left:100px; background:red;}
 			#abs4{top:0px; left:150px; background:blue;}
 			#abs5{top:0px; left:200px; background:red;}
 			#abs6{top:0px; left:250px; background:blue;}
-			#abs7{top:0px; left:300px; background:red;}
+			#abs7{top:0px; left:300px; background:red;}*/
+			
+			#abs1{top:0px; left:0px; background:red;}
+			#abs2{top:50px; left:0px; background:blue;}
+			#abs3{top:100px; left:0px; background:red;}
+			#abs4{top:150px; left:0px; background:blue;}
+			#abs5{top:200px; left:0px; background:red;}
+			#abs6{top:250px; left:0px; background:blue;}
+			#abs7{top:300px; left:0px; background:red;}
 		</style>
 	</head>
 	<body>
