--- a/WEB02_CSS3/src/main/webapp/18_Position.html
+++ b/WEB02_CSS3/src/main/webapp/18_Position.html
@@ -80,10 +80,21 @@
 			#abs5{top:200px; left:0px; background:red;}
 			#abs6{top:250px; left:0px; background:blue;}
 			#abs7{top:300px; left:0px; background:red;}
+			
+			#fixed{
+				position:fixed; top:5px; left:5px; width:100px; height:100px;
+				background:silver; z-index:10;
+				/* z-index:10; : 다른 어떤 div 보다 위에 있게 하려고 높은 인덱스 값을 지정합니다. */
+			}
 		</style>
 	</head>
 	<body>
 	
+		<h1>절대적 위치 좌표 - fixed</h1>
+		<div id="fixed"></div>
+		<hr>
+	
+		<div class = "temp"></div>
 		<h1>절대적 위치 좌표 - absolute</h1>
 		<div id = "wrap">
 			<div id = "abs1" class = "box5"></div>
@@ -95,7 +106,8 @@
 			<div id = "abs7" class = "box5"></div>
 		</div>
 		<hr>
-	
+		
+		<div class = "temp"></div>
 		<h1>상대적 위치 좌표 - relative</h1>
 		<div class ="box3" >박스3</div>
 		<div class ="box4" >박스4</div>
