--- a/WEB02_CSS3/src/main/webapp/19_Font.html
+++ b/WEB02_CSS3/src/main/webapp/19_Font.html
@@ -22,8 +22,41 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>19_Font</title>
+		
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+		
+		<style type="text/css">
+			.font_arial{
+				font-family: Arial, sans-serif;
+			}
+			.font_roman{
+				font-family: 'Times New Roman', serif;
+			}
+			.font_gulim{
+				font-family: 굴림;
+			}
+			.font_big{
+				font-size: 150%;
+			}
+			.font_italic{
+				font-style: italic;
+			}
+			.font_bold{
+				font-weight:bold;
+			}
+			.font_BebasNeue{
+				font-family: 'Bebas Neue', cursive;
+			}
+		</style>
 	</head>
 	<body>
-	
+		<h1 class="font_arial">Lorem ipsum</h1>
+		<h1 class="font_roman">Lorem ipsum</h1>
+		<h1 class="font_gulim">Lorem ipsum</h1>
+		<p class="font_italic font_big font_bold">Lorem ipsum dolor amet</p>
+		<p class="font_BebasNeue font_big">Lorem ipsum dolor amet</p> 
+		
 	</body>
 </html>
