--- a/WEB02_CSS3/src/main/webapp/20_CssButton.html
+++ b/WEB02_CSS3/src/main/webapp/20_CssButton.html
@@ -16,6 +16,8 @@
 				line-height:70px;
 				/* 줄간격 70이며, 여러줄일 때 줄과 줄사이 간격을 나타냅니다. 다만 한 줄의 텍스트에서
 				div 세로 크기와 같은 크기를 지정하면, 상하 가운데 맞춤이 됩니다. */
+				font-size:200%;
+				border-radius:30px;
 			}
 		
 		</style>
