--- a/WEB02_CSS3/src/main/webapp/20_CssButton.html
+++ b/WEB02_CSS3/src/main/webapp/20_CssButton.html
@@ -19,7 +19,11 @@
 				font-size:200%;
 				border-radius:30px;
 			}
-		
+			a{
+				font-weight:bold; text-decoration: none; color:white;
+				/* text-decoration: none; : 밑줄 등의 스타일을 없앱니다. 주로 앵커 태그 밑줄 없앨 때
+				많이 사용합니다. */
+			}
 		</style>
 	</head>
 	<body>
