--- a/WEB02_CSS3/src/main/webapp/20_CssButton.html
+++ b/WEB02_CSS3/src/main/webapp/20_CssButton.html
@@ -18,6 +18,7 @@
 				div 세로 크기와 같은 크기를 지정하면, 상하 가운데 맞춤이 됩니다. */
 				font-size:200%;
 				border-radius:30px;
+				text-shadow: 2px 2px 2px #333333;
 			}
 			a{
 				font-weight:bold; text-decoration: none; color:white;
