--- a/WEB02_CSS3/src/main/webapp/20_CssButton.html
+++ b/WEB02_CSS3/src/main/webapp/20_CssButton.html
@@ -25,10 +25,25 @@
 				/* text-decoration: none; : 밑줄 등의 스타일을 없앱니다. 주로 앵커 태그 밑줄 없앨 때
 				많이 사용합니다. */
 			}
+			
+			input[type=button]{
+				width:170px;
+				height:90px;
+				background:#FF6A00;
+				border:10px solid white;
+				box-shadow: 5px 5px 5px #555555;
+				text-align:center;
+				font-size:200%;
+				border-radius:30px;
+				text-shadow: 2px 2px 2px #333333;
+				font-weight:bold; color:white;
+			}
 		</style>
 	</head>
 	<body>
 		<!-- css로 버튼 생성 -->
 		<div class="button"><a href="#">Click</a></div>
+		<br> <hr> <br>
+		<input type="button" value="Click">
 	</body>
 </html>
