--- a/WEB02_CSS3/src/main/webapp/22_Visibility.html
+++ b/WEB02_CSS3/src/main/webapp/22_Visibility.html
@@ -3,8 +3,33 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>22_Visibility</title>
+		
+		<style type="text/css">
+			.box{
+				background-color:yellow; width:300px; height:100px; margin:10px;
+			}
+			#box1{
+				display:none;
+				/* 화면에서 사라집니다. 자리도 없어집니다. */
+			}
+			#box2{
+				visibility:hidden; /* 태그가 화면에 보이지 않을뿐 블럭 형식이 동작됩니다. */
+			}
+		</style>
 	</head>
 	<body>
+		<span>Dummy</span>
+		<div id = "box1" class="box">
+			<span>교육의 자주성●전문성.정치적 중립성 및 대학의 자율성은 법률이 정하는 바</span>
+		</div>
+		<span>Dummy</span>
+		<br> <br>
 		
+		<span>Dummy</span>
+		<div id = "box2" class="box">
+			<span>교육의 자주성●전문성.정치적 중립성 및 대학의 자율성은 법률이 정하는 바</span>
+		</div>
+		<span>Dummy</span>
+		<br> <br>
 	</body>
 </html>
