--- a/WEB02_CSS3/src/main/webapp/22_Visibility.html
+++ b/WEB02_CSS3/src/main/webapp/22_Visibility.html
@@ -15,6 +15,13 @@
 			#box2{
 				visibility:hidden; /* 태그가 화면에 보이지 않을뿐 블럭 형식이 동작됩니다. */
 			}
+			#box3{
+				visibility:collapse; /* 일반적 태그에 적용하면 hidden과 같이 작동합니다. */
+			}
+			/* 다만 테이블에 작동하면 블럭 형식만 남고 공간은 없어집니다.*/
+			table{
+				visibility:collapse;
+			}
 		</style>
 	</head>
 	<body>
@@ -23,13 +30,32 @@
 			<span>교육의 자주성●전문성.정치적 중립성 및 대학의 자율성은 법률이 정하는 바</span>
 		</div>
 		<span>Dummy</span>
-		<br> <br>
+		<br> <br> <hr>
 		
 		<span>Dummy</span>
 		<div id = "box2" class="box">
 			<span>교육의 자주성●전문성.정치적 중립성 및 대학의 자율성은 법률이 정하는 바</span>
 		</div>
 		<span>Dummy</span>
-		<br> <br>
+		<br> <br> <hr>
+		
+		<span>Dummy</span>
+		<div id = "box3" class="box">
+			<span>교육의 자주성●전문성.정치적 중립성 및 대학의 자율성은 법률이 정하는 바</span>
+		</div>
+		<span>Dummy</span>
+		<br> <br> <hr>
+		
+		<span>Dummy</span>
+		<table border="1">
+			<tr>
+				<td>Test1</td><td>Test2</td>
+			</tr>
+			<tr>
+				<td>Test3</td><td>Test4</td>
+			</tr>
+		</table>
+		<span>Dummy</span>
+		<br> <br> <hr>
 	</body>
 </html>
