--- a/WEB02_CSS3/src/main/webapp/23_Shadow.html
+++ b/WEB02_CSS3/src/main/webapp/23_Shadow.html
@@ -23,6 +23,8 @@
 			/* 첫 번째와 두 번째 요소는 좌우 상하 그림자 크기, 양수는 오른쪽 아래로, 음수는 왼쪽 위로  */
 			/* 세 번째 요소는 번짐 정도, 네 번째는 그림자 확장 다섯 번째는 그림자 색상 */
 			
+			/* 같은 방식으로 text-shadow도 있습니다. 다만 글자에 그림자를 넣은 동작이므로, 사용할 때 글자의 굵기가
+			굵은 font를 적용 후 사용하는 것이 자연스럽습니다. */
 		</style>
 	</head>
 	<body>
