--- a/WEB02_CSS3/src/main/webapp/24_Gradiant.html
+++ b/WEB02_CSS3/src/main/webapp/24_Gradiant.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
+<!-- * 그레디언트(gradient)
+	- 2가지 이상의 색상을 혼합한 색을 만들어 채색하는 기능.
+	- https://www.colorzilla.com/gradient-editor -->
 <html>
 	<head>
 		<meta charset="UTF-8">
 		<title>24_Gradiant</title>
+		<style type="text/css">
+			.gradient{
+				height:90px; line-height:90px; 
+				text-align:center; border:1px solid black;
+				font-size:200%; font-weight:bold;
+			}
+		</style>
+		
 	</head>
 	<body>
-		
+		<div class="gradient">
+			CSS3 Gradient
+		</div>
 	</body>
 </html>
